fix: restore alignment of feed icons with filler line

--- a/src/main/webapp/uii/template/css/src/base/_typography-custom.scss
+++ b/src/main/webapp/uii/template/css/src/base/_typography-custom.scss
@@ -114,6 +114,6 @@ a {
   font-weight: 700;
 }
 
-.fa + span {
+.fa + span:not(.filler) {
   margin-inline-start: 0.25rem;
 }
